--- a/views/login.ejs
+++ b/views/login.ejs
@@ -1,125 +1,43 @@
-<!DOCTYPE html>
-<html lang="en">
-    <head>
-        <meta charset="utf-8" />
-        <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
-        <meta name="description" content="" />
-        <meta name="author" content="" />
-        <title>Agency - Start Bootstrap Theme</title>
-        <link rel="icon" type="image/x-icon" href="assets/favicon.ico" />
-        <!-- Font Awesome icons (free version)-->
-        <script src="https://use.fontawesome.com/releases/v5.15.3/js/all.js" crossorigin="anonymous"></script>
-        <!-- Google fonts-->
-        <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet" type="text/css" />
-        <link href="https://fonts.googleapis.com/css?family=Roboto+Slab:400,100,300,700" rel="stylesheet" type="text/css" />
-        <!-- Core theme CSS (includes Bootstrap)-->
-        <link href="style.css" rel="stylesheet" />
-    </head>
-    <body id="page-top">
-        <!-- Navigation-->
-        <nav class="navbar navbar-expand-lg navbar-dark fixed-top" id="mainNav">
-            <div class="container">
-                <a class="navbar-brand js-scroll-trigger" href="#page-top"><img src="/img/sns_logo.png" alt="..." /></a>
-                <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
-                    Menu
-                    <i class="fas fa-bars ml-1"></i>
-                </button>
-                <div class="collapse navbar-collapse" id="navbarResponsive">
-                    <ul class="navbar-nav text-uppercase ml-auto">
-                        <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#services">Movement History</a></li>
-                        <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#about">John Doe</a></li>
-                        <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#contact">Settings</a></li>
-                    </ul>
+<% include ./partials/header.ejs %>
+
+
+
+
+<header class="masthead" style="height: 100vh;">
+    <div class="container login-container">
+        <div class="login-content col-sm-8 col-lg-6 col-xl-4">
+          <div class="login_card">
+            <div class="login-header">
+              <img src="/img/sns_logo.png" alt="">
+            </div>
+            <form method="POST" action="/login">
+              <div class="login_wrapper">
+                <br />
+                <!-- PASSPORT REQUIRED BOTH USERID AND PASSWORD SO LEAVEING USERID HIDDEN -->
+                <input id="userID" type="text" class="d-none form-control  pass_input"  name="name" value="12">
+                <div class="form-group">
+                  <div class="col-md-12">
+                    <input id="password" type="password" class="form-control  pass_input" maxlength="10" name="password" required="" autocomplete="current-password" placeholder="Enter PIN Code">
+                  </div>
                 </div>
-            </div>
-        </nav>
-        <!-- Masthead-->
-        <header class="masthead">
-            <div class="container">
-                
-                <div class="masthead-heading text-uppercase">S&S Inventory</div>
-                <div class="masthead-subheading">Start Inventory Movement</div>
-                <a class="btn btn-primary btn-xl text-uppercase js-scroll-trigger" href="#services">Start Movement</a>
-            </div>
-        </header>
-        <!-- Services-->
-        <section class="page-section" id="services">
-            <div class="container">
-                <div class="text-center ">
-                    <h2 class="section-heading text-uppercase">View Previous Inventory Movements</h2>
-                    <h3 class="section-subheading text-muted">Recent Movement History</h3>
+              </div>
+              <div class="login_ftrmy">
+                <button class="btn btn-primary" type="submit"> Login </button>
+                <div class="login-footer">
+                  <!--<span class="powered_by">
+                    <img src="https://placeholder.com/wp-content/uploads/2018/10/placeholder.com-logo1.png" alt="">
+                  </span>
+                  <span>
+                    <img src="https://placeholder.com/wp-content/uploads/2018/10/placeholder.com-logo1.png" alt="">
+                  </span>-->
                 </div>
-                <!-- <div class="row text-center">
-                    <div class="col-md-4">
-                        <span class="fa-stack fa-4x">
-                            <i class="fas fa-circle fa-stack-2x text-primary"></i>
-                            <i class="fas fa-shopping-cart fa-stack-1x fa-inverse"></i>
-                        </span>
-                        <h4 class="my-3">E-Commerce</h4>
-                        <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima maxime quam architecto quo inventore harum ex magni, dicta impedit.</p>
-                    </div>
-                    <div class="col-md-4">
-                        <span class="fa-stack fa-4x">
-                            <i class="fas fa-circle fa-stack-2x text-primary"></i>
-                            <i class="fas fa-laptop fa-stack-1x fa-inverse"></i>
-                        </span>
-                        <h4 class="my-3">Responsive Design</h4>
-                        <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima maxime quam architecto quo inventore harum ex magni, dicta impedit.</p>
-                    </div>
-                    <div class="col-md-4">
-                        <span class="fa-stack fa-4x">
-                            <i class="fas fa-circle fa-stack-2x text-primary"></i>
-                            <i class="fas fa-lock fa-stack-1x fa-inverse"></i>
-                        </span>
-                        <h4 class="my-3">Web Security</h4>
-                        <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima maxime quam architecto quo inventore harum ex magni, dicta impedit.</p>
-                    </div>
-                </div> -->
-            </div>
-        </section>
-        
-        <!-- Contact-->
-        <section class="page-section" id="contact">
-            <div class="container">
-                <div class="text-center">
-                    <h2 class="section-heading text-uppercase">Settings</h2>
-                    <h3 class="section-subheading text-muted">Modify barcode settings</h3>
-                </div>
-               
-            </div>
-        </section>
-        <!-- Footer-->
-        <footer class="footer py-4">
-            <div class="container">
-                <div class="row align-items-center">
-                    <div class="col-lg-4 text-lg-left">
-                        
-                        <!-- This script automatically adds the current year to your website footer-->
-                        <!-- (credit: https://updateyourfooter.com/)-->
-                        
-                    </div>
-                    <div class="col-lg-4 my-3 my-lg-0">
-                        Copyright &copy; S&S
-                        <script>
-                            document.write(new Date().getFullYear());
-                        </script>
-                    </div>
-                    <div class="col-lg-4 text-lg-right">
-                        
-                    </div>
-                </div>
-            </div>
-        </footer>
+              </div>
+            </form>
+          </div>
+        </div>
+      </div>
       
-        <!-- Bootstrap core JS-->
-        <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
-        <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/js/bootstrap.bundle.min.js"></script>
-        <!-- Third party plugin JS-->
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/animejs/3.2.1/anime.min.js"></script>
-        <!-- Contact form JS-->
-        <script src="assets/mail/jqBootstrapValidation.js"></script>
-        <script src="assets/mail/contact_me.js"></script>
-        <!-- Core theme JS-->
-        <script src="/src/theme.js"></script>
-    </body>
-</html>
+     
+</header>
+
+<% include ./partials/footer.ejs %>
