add bin movement

--- a/views/landing.ejs
+++ b/views/landing.ejs
@@ -33,7 +33,7 @@
             <h2 class="section-heading text-uppercase">Move Inventory</h2>
             <!-- <h3 class="section-subheading text-muted">Recent Movement History</h3> -->
             <div class=" binMovement" style="width: 100%;">
-                <p id="currentBinScannedForMovement"></p>
+                <p id="currentBinScannedForMovement" style="font-size: 1.3em;"></p>
                 <p id="currentBinLocation"></p>
                 <p id="newBinLocation"></p>
                 <table class="table table-striped table-sm table-dark" id="tblBinContents">
