--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -23,7 +23,7 @@
 
 <!-- ulitity file-->
 <script src="/src/utils.js"></script>
-
+<script src="/src/moment.js"></script>
 
 <!-- Load page specific JS-->
 <% if(typeof jsFileLocation != 'undefined'){ %>
